syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

option java_package = "com.moonsworth.apollo.protocol";
option java_outer_classname = "ApolloProtocol";
option java_multiple_files = true;

// Module List
// A list of modules to make the client aware of.

message ModuleList {
  repeated string modules = 1;
}

// Module Options
// Allows the server to manipulate options on the client temporarily.

message Modules {
  map<string, ModuleOptions> modules = 1;
}

message ModuleOptions {
  bool enabled = 1;
  map<string, ModuleOption> options = 2;
}

message ModuleOption {
  oneof value {
    SetOption set = 1;
    AddOption add = 2;
    ReplaceOption replace = 3;
  }
}

// Option Wrappers
// The option wrapper will make it possible to set, add, or replace
// specific option values.

message SetOption {
  ValueWrapper value = 1;
}

message AddOption {
  ValueWrapper value = 1;
}

message ReplaceOption {
  ValueWrapper compare = 1;
  ValueWrapper update = 2;
}

// Abstract Types

message StructWrapper {
  map<string, ValueWrapper> fields = 1;
}

message ListWrapper {
  repeated ValueWrapper values = 1;
}

message ValueWrapper {
  // The kind of value.
  oneof kind {
    // Represents a null value.
    google.protobuf.NullValue null_value = 1;
    // Represents a double value.
    double number_value = 2;
    // Represents a string value.
    string string_value = 3;
    // Represents a boolean value.
    bool bool_value = 4;
    // Represents a structured value.
    StructWrapper struct_value = 5;
    // Represents a repeated `Value`.
    ListWrapper list_value = 6;
    // Represents any value.
    google.protobuf.Any any_value = 7;
  }
}

// Module Types

message CooldownMessage {
  string name = 1;
  int64 duration = 2;
}
